[tool.poetry]
name = "geoproject"
version = "0.1.0"
description = ""
authors = ["dl <965794928@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
geopandas = "^1.0.1"
dash = "^2.18.1"
plotly = "^5.24.1"
requests = "^2.32.3"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
tqdm = "^4.66.5"
loguru = "^0.7.2"
dash-bootstrap-components = "^1.6.0"
jupyter-dash = "^0.4.2"
dash-html-components = "^2.0.0"
dash-core-components = "^2.0.0"
dash-daq = "^0.5.0"
dash-leaflet = "^1.0.15"
dash-extensions = "^1.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
